syntax = "proto3";

package eventmaster;

service EventMaster {
    rpc AddEvent (Event) returns (WriteResponse) {}
    rpc GetEvents (Query) returns (stream Event) {}
    rpc GetEventByID (EventID) returns (Event) {}
    rpc GetEventIDs (TimeQuery) returns (stream EventID) {}
    rpc AddTopic (Topic) returns (WriteResponse) {}
    rpc UpdateTopic (UpdateTopicRequest) returns (WriteResponse) {}
    rpc DeleteTopic (DeleteTopicRequest) returns (WriteResponse) {}
    rpc GetTopics (EmptyRequest) returns (TopicResult) {}
    rpc AddDC (DC) returns (WriteResponse) {}
    rpc UpdateDC (UpdateDCRequest) returns (WriteResponse) {}
    rpc GetDCs (EmptyRequest) returns (DCResult) {}
    
    rpc Healthcheck(HealthcheckRequest) returns (HealthcheckResponse) {}
}
 
message Event {
    string eventID = 1;
    string parent_eventID = 2;
    int64 event_time = 3;
    string DC = 4;
    string topic_name = 5;
    repeated string tag_set = 6;
    string host = 7;
    repeated string target_host_set = 8;
    string user = 9;
    bytes data = 10;
}
 
message Query {
    repeated string DC = 1;
    repeated string host = 2;
    repeated string target_host_set = 3;
    repeated string user = 4;
    repeated string topic_name = 5;
    repeated string tag_set = 6;
    repeated string parent_eventID = 7;
    string data = 8;
    int64 start_event_time = 9;
    int64 end_event_time = 10;
    int64 start_received_time = 11;
    int64 end_received_time = 12;

    int32 start = 15;
    int32 limit = 16;
    string eventID = 17;
    bool tag_and_operator = 18;
    bool target_host_and_operator = 19;
    repeated string exclude_tag_set = 20;
}

message TimeQuery {
    int64 start_event_time = 1;
    int64 end_event_time = 2;
    int32 limit = 3;
    bool ascending = 4;
}

message EventID {
    string eventID = 1;
}
 
message Topic {
    string ID = 1;
    string topic_name = 2;
    bytes data_schema = 3;
}

message TopicResult {
    repeated Topic results = 1;
}
 
message UpdateTopicRequest {
    string old_name = 1;
    string new_name = 2;
    bytes data_schema = 3;
}

message DeleteTopicRequest {
    string topic_name = 1;
}
 
message DC {
    string ID = 1;
    string DC_name = 2;
}

message DCResult {
    repeated DC results = 1;
}
 
message UpdateDCRequest {
    string old_name = 1;
    string new_name = 2;
}
 
message WriteResponse {
    string ID = 3;
}

message EmptyRequest {}

message HealthcheckRequest {}
message HealthcheckResponse {
    string response = 1;
}
